package eu.groupnine.codingweak;

public interface Observer {
    
    public void refresh();
    
}
