package eu.groupnine.codingweak.stockage;

public class Carte {
    String question;
    String reponse;   
}
