package eu.groupnine.codingweak.stockage;

public class Stats {
    int cartesJouees;
    int cartesTrouvees;
    int cartesNonTrouvees;
    float cartesParMinutes;
    int tempsPasse;
}
