package eu.groupnine.codingweak.stockage;

import java.util.ArrayList;
import java.util.HashMap;

public class Stockage {
    HashMap<String,Pile> EnsembleDesPiles;
    

    //Permet de mettre à jour EnsembleDesPiles par rapport aux données stockées en dur
    public void load(){

    }
    //Permet de mettre à jour les données stockées en dur par rapport à EnsembleDesPiles
    public void save(){

    }

    public Pile getPile(){
        return null;
    }
}
